# maknoon-pq-crypto-rs

./: .gitignore  Cargo.toml
.github/ISSUE_TEMPLATE/: config.yml
android/: build-aar.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
pq-crypto-core/: Cargo.toml
pq-crypto-core/src/: lib.rs  xwing.rs
pq-crypto-core/tests/: parity.rs  xwing_parity.rs
test-vectors/: mldsa65.kat.json
tools/: cryptokit_oracle.swift  xwing_oracle.swift
